Fix parsed formatting to conform to Python syntax
Convert Java-style formatting to Python-style formatting returned from
toString() methods of Statement implementations.

Implement parsed formatting for ClassDef and TryBlock.